# examples

./: .gitignore  .gitmodules
basic_ai/: CMakeLists.txt  basic_ai.cpp
commentator-skeleton-cpp/: CMakeLists.txt  commentator-skeleton  commentator-skeleton.cpp
commentator-skeleton-py/: commentator_py.py
commentator_skeleton_cpp/: CMakeLists.txt  commentator_skeleton  commentator_skeleton.cpp
commentator_skeleton_py/: commentator_skeleton.py
common/: ai_base.cpp  ai_base.hpp
dqn_py/: .dqn_train.py.swp  dqn_nn.py  dqn_py.py  dqn_train.py
frame_skipper/: CMakeLists.txt  frame_skipper  frame_skipper.cpp
general_check-variables_cpp/: general_check-variables  general_check-variables.cpp
general_check-variables_py/: general_check-variables.py
general_frame-skip_cpp/: general_frame-skip  general_frame-skip.cpp
general_frame-skip_py/: general_frame-skip.py
general_image-fetch_cpp/: CMakeLists.txt  general_image-fetch  general_image-fetch.cpp
general_image-fetch_py/: general_image-fetch.py
opencv/: CMakeLists.txt  opencv.cpp
player_check-variables_cpp/: CMakeLists.txt  player_check-variables.cpp
player_check-variables_py/: player_check-variables.py
player_deep-learning-play_py/: dqn_nn.py  player_deep-learning-play.py
player_deep-learning-train_py/: player_deep-learning-train.py
player_random-walk_cpp/: player_random-walk  player_random-walk.cpp
player_random-walk_py/: README.md  player_random-walk.py
player_rulebased-A_cpp/: player_rulebased-A  player_rulebased-A.cpp
player_rulebased-A_py/: player_rulebased-A.py
player_rulebased-B_cpp/: player_rulebased-B
player_rulebased-B_py/: player_rulebased-B.py
player_rulebased_cpp/: CMakeLists.txt  player_rulebased  player_rulebased.cpp
player_rulebased_py/: helper.py  player_rulebased.py
player_skeleton_cpp/: player_skeleton  player_skeleton.cpp
random_walk/: .gitignore  CMakeLists.txt  random_walk  random_walk.cpp
skeleton-cpp/: .gitignore  CMakeLists.txt  skeleton  skeleton.cpp
(+17 files in other folders)
